client/src/styles/index.scss
/*
 TODO: Swap hardcoded colors for sass vars
 TODO: ORGANIZE ME PLEASE
*/

@import "_colors.scss";
@import url("https://fonts.googleapis.com/css?family=Open+Sans");
@import url("https://fonts.googleapis.com/css?family=Space+Mono|Oswald|Playfair+Display|Nunito:300|Lora|Nunito+Sans|Poppins:400,500,600,700|ZCOOL+XiaoWei");

html {
  background: linear-gradient(180deg, #242932 0%, #12141a 100%);
  font-size: 10px; // allows rems to be 1:10 ratio
}

.App {
  text-align: center;
}

// Currently unused
.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  color: white;
  padding: 40px;
}

// Currently unused
.App-link {
  color: #61dafb;
}

// Currently unused
@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

body {
  margin: 0;
  padding: 0;
  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
    "Helvetica Neue", sans-serif;
  font-size: 2.4rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

// ** Navigation ** //
.page-nav {
  width: 100%;
  margin-bottom: 48px;
}

.parent-screen-link {
  font-size: 1.4rem;
  text-align: left;
  color: #545f75;
  display: inline;
  float: left;
}

.parent-screen-link:hover {
  color: #a7bbe2;
}

.menu-toggle {
  font-size: 1.4rem;
  height: 14px;
  cursor: pointer;
}

.menu-toggle:hover path {
  fill: #a7bbe2;
}

.menu {
  width: 18rem;
  height: 100vh;
  background-color: $blue-gray-8;
  // padding: 40px;
  position: absolute;
  z-index: 200;
  top: 0;
  left: 0;
  transform: translateX(-18rem);
  transition: transform 650ms;
}

.menu.open {
  transform: translateX(0rem);
}

.menu ul {
  list-style: none;
  text-align: left;
}

.menu ul li a {
  color: #7d8cac;
  font-size: 1.8rem;
}
.menu ul li a:hover {
  color: #a7bbe2;
}
// ** End Navigation ** //

// ** Pages ** //
main {
  text-align: left;
}
.page-title {
  margin: 0 0 16px 0;
}
// ** End Pages ** //

// ** Exercises Page ** //
.exercise-input {
  width: 100px;
}

.error-message {
  color: $red-7;
  font-size: 8px;
}

.exercise-name {
  color: $blue-3;
  margin-right: 20px;
}

.add-exercise-button {
  margin-bottom: 40px;
}
// ** End Exercises Page ** //

// ** Exercise Page ** //

.exercise-page-workout-date {
  font-size: 1.8rem;
  text-align: left;
  color: #a7bbe2;
}

.exercise-page-name {
  font-size: 3.6rem;
  text-align: left;
  margin-bottom: 50px;
}

.create-set-form {
  margin-bottom: 48px;
}

.field {
  display: inline-block;
  margin-right: 50px;
}

.rpe-field {
  margin: 0;
}

.field-label {
  color: #a7bbe2;
  display: block;
  font-size: 0.4em;
  font-family: "Open Sans";
  text-align: center;
  margin-bottom: 5px;
}

input {
  background-color: #252a3400;
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: solid #545f75 1px;
  color: #545f75;
  font-size: 1em;
  font-family: "Open Sans";
  text-align: center;
  width: 89px;
}

input:focus {
  // background-color: #356cda;
  outline: none;
  border: none;
  border-bottom: solid #6397ff 1px;
}

input::placeholder {
  color: #303643;
}

#weight {
  margin-right: 5px;
}

select {
  background-color: #252a3400;
  border: none;
  color: #545f75;
  font-size: 1em;
  font-family: "Open Sans";
  text-align-last: center;
}

select:focus,
select:active {
  border: none;
}

.create-set-form-buttons {
  display: flex;
  margin-top: 32px;
}

button {
  background: linear-gradient(180deg, #6397ff 0%, #356cda 100%);
  box-shadow: 0px 1px 8px #356cda;
  border-radius: 5px;
  border: none;
  color: #252a34;
  cursor: pointer;
  font-family: "Open Sans";
  padding: 7px 15px;
  position: relative;
  width: 192px;
  height: 48px;
  top: 0;
}

.add-note,
.add-timer {
  margin: 8px 0px 0px 40px;
}

.add-timer:hover path,
.add-note:hover path {
  fill: #a7bbe2;
}

.working-sets {
  color: #a7bbe2;
  margin-bottom: 48px;
  text-align: left;
  display: grid;
  grid-template-rows: auto-flow;
  gap: 15px;
}

.working-set {
  grid-column: span 5;
  display: grid;
  gap: 10px;
  grid-template-columns:
    minmax(26px, 31px)
    minmax(45px, 93px) /*max 115px with 3 decimal places*/
    minmax(45px, 67px)
    minmax(51px, 55px)
    auto;
}

/* Grid Items */
.working-set > span,
.working-set i {
  align-self: end;
  line-height: 0.5em;
}

.working-sets i {
  font-size: 0.6em;
  padding-bottom: 3px;
}

.working-sets .unit {
  font-variant-caps: unicase;
  color: #545f75;
  font-size: 0.8em;
  margin-left: 5px;
}

.working-set-index {
  grid-column: 1;
  text-align: left;
  color: orangered;
  font-size: 0.45em;
}

.working-set-weight {
  grid-column: 2;
  text-align: right;
}

.working-set-reps {
  grid-column: 3;
  text-align: right;
}

.working-set-rpe {
  grid-column: 4;
  text-align: right;
}

.edit-icon {
  grid-column: 5;
  color: #545f75;
  margin-left: 10px;
}

.edit-icon:hover {
  color: $green-5;
}

.delete-icon {
  grid-column: 5;
  color: #545f75;
  margin-left: 10px;
}

.delete-icon:hover {
  color: $red-5;
}
/* End Grid Items */
// ** End Exercise Page ** //

// ** Modal ** //
.backdrop {
  width: 100vw;
  height: 100vh;
  background-color: rgba(60, 60, 65, 0.99); //#242932bb;
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
}

.modal {
  display: none;
  background-color: $blue-gray-8;
  // padding: 40px;
  position: absolute;
  z-index: 200;
  margin: auto;
  padding: 32px;
  border-radius: 5px;
}

.modal.open {
  display: block;
}

.close-modal-button {
  color: #7d8cac;
  line-height: 16px;
  transition: color 250ms;
}
.close-modal-button:hover {
  color: #a7bbe2;
}

.modal-title {
  line-height: 36px;
  margin-bottom: 30px;
}

.modal .field {
  margin: 0 0 20px 0;
  display: block;
  width: 100%;
}

.modal .field-label {
  text-align: left;
}

.modal .exercise-input {
  width: 100%;
  text-align: left;
  margin-bottom: 25px;
}
// ** End Modal ** //

// ** Utility Classes ** //
.pointer {
  cursor: pointer;
}

.hidden {
  display: none;
}

.right {
  float: right;
}

.center {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

a {
  text-decoration: none;
}
// ** End Utility Classes ** //

// ** Text ** //
h1,
h2 {
  margin: 0;
}
// ** End Test ** //

